
Tom Charlesworth
tomch at users.berlios.de


Latest:
-------


1.23.3 - 6 Dec 2013
-------------------
Changes:
. Support cursor keys (in addition to numpad) when using keyboard as joystick emulation
. Support auto-fire for all 3 joystick buttons (via Config->Input)
. Debugger: Added "disk info" command
. Added confirmation message box for reboot (F2)
. Added -no-printscreen-dlg to surpress the warning if AppleWin failed to capture the PrintScreen key 
Fixes:
. [Bug #19154] ProDOS Order 2IMG crashing
. [Support #103098] Sometimes swapping disk could cause INIT to fail with ERROR #8


1.23.2 - 14 Sep 2013
--------------------
Changes:
. Added About dialog showing GPL (at startup, but only when AppleWin version changes).
. [Bug #18940] Extend BSAVE and BLOAD Command To Memory Banks 0 and 1
	Extended debugger BLOAD with bank support:
	. BLOAD [file],[bank:]address[,length]
	. BLOAD [file],[bank:]address[:end]
	. If no filename specified, will use last BLOAD or BSAVE filename.
	Extended debugger BSAVE with bank support:
	. BSAVE [file],[bank:]address,length
	. BSAVE [file],[bank:]address:end
	. If no filename specified, defaults to: '####.####.[bank##].bin'
		(where the form is <address>.<length>.bin)

Fixes:
. Fixed save-state bug for when 4K BANK1 is dirty (previously it would save the stale data instead).
. [Bug #18723,#19070] Mouse movement for CopyII+9.1 and ProTERM3.1.


1.23.0 - 26 Apr 2013
--------------------
RC for public release.

Changes:
. Extended logging support during startup and shutdown.
. Allow debugging of save-state image from start-up "logo" screen.
. Added Troubleshooting section to help file.

Fixes:
. Screenshot 280x192:
  - [Bug #018928] Correction for left edge loss of scaled scanline.
  - A screenshot in 50% scanline mode would produce an all black image.
. Fixed inserting of disk images from save-state when drive-2 contained the disk required for drive-1.


1.22.1 - 7 Mar 2013
--------------------
Changes:
. Make 2x the default